tests/sawn/fixtures/invalid/30_negative_nan.sawn
// §2.6: -nan is not valid; it is a parse error
value=-nan
